unit-tests.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: unit-tests
   labels:
     app: unit-tests
