unit-testsns.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: unit-tests
   labels:
    name: unit-tests
