unit-testes-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"unit-tests"},"name":"unit-tests","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"unit-tests"}},"template":{"metadata":{"labels":{"app":"unit-tests"}},"spec":{"containers":[{"image":"nginx:1.16","name":"unit-tests","ports":[{"containerPort":5001}]}]}}}}
  creationTimestamp: "2021-11-24T14:18:52Z"
  generation: 1
  labels:
    app: unit-tests
  name: unit-tests
  namespace: default
  resourceVersion: "51226"
  uid: 40cebc79-b7b9-4034-96e3-23d8c1376cca
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: unit-tests
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: unit-tests
    spec:
      containers:
      - image: nginx:1.16
        imagePullPolicy: IfNotPresent
        name: unit-tests
        ports:
        - containerPort: 5001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-11-24T14:18:53Z"
    lastUpdateTime: "2021-11-24T14:18:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-11-24T14:18:52Z"
    lastUpdateTime: "2021-11-24T14:18:53Z"
    message: ReplicaSet "unit-tests-5776b4c5cc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
