service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unit-tests
spec:
  selector:
    app: unit-tests
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      # nodePort: 30001
